[gd_scene load_steps=12 format=3 uid="uid://cokyq8ps0qnit"]

[ext_resource type="Script" path="res://scenes/main.gd" id="1_3ie75"]
[ext_resource type="PackedScene" uid="uid://dlteek5idwby5" path="res://levels/test_level.tscn" id="1_alk34"]
[ext_resource type="PackedScene" uid="uid://bkbmrff26jmg0" path="res://scenes/player/player.tscn" id="1_k1yut"]
[ext_resource type="PackedScene" uid="uid://bfgoqm13hfrtf" path="res://scenes/player/inventory/inventory.tscn" id="3_dxsm1"]
[ext_resource type="Resource" uid="uid://pwlawux1b5al" path="res://test_inv.tres" id="3_uhrjd"]
[ext_resource type="Script" path="res://resources/inventory/inventory_interface.gd" id="5_t2egb"]
[ext_resource type="PackedScene" uid="uid://bn1jnvfmt3uyj" path="res://scenes/player/inventory/slot.tscn" id="7_e5pgi"]
[ext_resource type="PackedScene" uid="uid://bx3xdfob4xt3m" path="res://scenes/player/inventory/pick_up.tscn" id="8_4o57i"]
[ext_resource type="Resource" uid="uid://bv2mp2pvllah3" path="res://resources/item/items/tomato.tres" id="9_l80m2"]
[ext_resource type="Script" path="res://resources/inventory/slot_data.gd" id="10_2bf1x"]

[sub_resource type="Resource" id="Resource_r562v"]
script = ExtResource("10_2bf1x")
item_data = ExtResource("9_l80m2")
quantity = 1

[node name="Main" type="Node"]
script = ExtResource("1_3ie75")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(107, 161)
process_callback = 0
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="InventoryInterface" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_t2egb")

[node name="PlayerInventory" parent="UI/InventoryInterface" instance=ExtResource("3_dxsm1")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 4.0
offset_top = 4.0
offset_right = 44.0
offset_bottom = 44.0
grow_horizontal = 1
grow_vertical = 1

[node name="GrabbedSlot" parent="UI/InventoryInterface" instance=ExtResource("7_e5pgi")]
visible = false
modulate = Color(1, 1, 1, 0.705882)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 20.0
offset_bottom = 20.0

[node name="Player" parent="." instance=ExtResource("1_k1yut")]
position = Vector2(107, 161)
inventory_data = ExtResource("3_uhrjd")
metadata/_edit_group_ = true

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Player"]
remote_path = NodePath("../../Camera2D")

[node name="TestLevel" parent="." instance=ExtResource("1_alk34")]
position = Vector2(0, -1)

[node name="PickUp" parent="." instance=ExtResource("8_4o57i")]
position = Vector2(0, 37)
slot_data = SubResource("Resource_r562v")

[connection signal="drop_slot_data" from="UI/InventoryInterface" to="." method="_on_inventory_interface_drop_slot_data"]
[connection signal="gui_input" from="UI/InventoryInterface" to="UI/InventoryInterface" method="_on_gui_input"]
[connection signal="visibility_changed" from="UI/InventoryInterface" to="UI/InventoryInterface" method="_on_visibility_changed"]
